<resources>
    <string name="app_name">GyanMatrix</string>
    <string name="Runs">Runs</string>
    <string name="Match_played">Match played</string>
    <string name="cancelText">Cancel</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Googleplus">Google+</string>
    <string name="messenger">Messenger</string>
    <string name="Whatsapp">Whataspp</string>
</resources>
