<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:background="#99000000"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/share_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_button"

        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_share_facebook"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/twitter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_share_twitter"
                android:gravity="center"
                android:text="@string/twitter"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/googlePlus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_share_google_plus"
                android:gravity="center"
                android:text="@string/Googleplus"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/messenger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_share_messenger"
                android:gravity="center"
                android:text="@string/messenger"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/whatsapp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_share_whatsapp"
                android:gravity="center"
                android:text="@string/Whatsapp"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/roundrectangel_blue"
        android:gravity="center"
        android:text="@string/cancelText"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

</RelativeLayout>